tests/NormalTests/paczka1/small_fuzzy/80961114.err
Error in line 2: r95 A860 57,8
Error in line 1: CfaJ S713 70,2
Error in line 5: CfaJ S678 38,3
